fix: scrollbar color, fixes #390

--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -46,6 +46,10 @@ html body {
 }
 * {
   tab-size: 2;
+
+  &:hover {
+    scrollbar-color: auto;
+  }
 }
 
 .animate-ping {
